--- a/SlackLoggerLib/SlackLoggerLib.csproj
+++ b/SlackLoggerLib/SlackLoggerLib.csproj
@@ -1,7 +1,6 @@
 <Project Sdk="Microsoft.NET.Sdk">
 
   <PropertyGroup>
-    <OutputType>Exe</OutputType>
     <TargetFramework>net6.0</TargetFramework>
     <ImplicitUsings>enable</ImplicitUsings>
     <Nullable>enable</Nullable>
@@ -9,16 +8,10 @@
 
   <ItemGroup>
     <PackageReference Include="Newtonsoft.Json" Version="13.0.1" />
-    <PackageReference Include="RestSharp" Version="107.3.0" />
   </ItemGroup>
 
   <ItemGroup>
-    <ProjectReference Include="..\AllLogger\AllLogger.csproj" />
-    <ProjectReference Include="..\SlackLoggerLib\SlackLoggerLib.csproj" />
-  </ItemGroup>
-
-  <ItemGroup>
-    <Folder Include="Properties\" />
+    <ProjectReference Include="..\LoggerCore\LoggerCore.csproj" />
   </ItemGroup>
 
 </Project>
