Completed Solution ready to share.

--- a/Driver/Driver.csproj
+++ b/Driver/Driver.csproj
@@ -14,12 +14,7 @@
   </ItemGroup>
 
   <ItemGroup>
-    <PackageReference Include="Newtonsoft.Json" Version="13.0.1" />
-    <PackageReference Include="RestSharp" Version="107.3.0" />
-  </ItemGroup>
-
-  <ItemGroup>
-    <ProjectReference Include="..\AllLogger\Logger253.csproj" />
+    <ProjectReference Include="..\Logger253\Logger253.csproj" />
     <ProjectReference Include="..\LoggerCore\LoggerCore.csproj" />
   </ItemGroup>
 
